# pyexpstats

./: .gitignore  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt  test_pypi_install.py  vercel.json
.github/workflows/: docs.yml
abverdict/: __init__.py
api/: index.py  requirements.txt
docs/: index.md
docs/api/: conversion.md  magnitude.md  timing.md
docs/examples/: conversion.md  multi-variant.md  revenue.md  timing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: analyzing-results.md  confidence-intervals.md  diff-in-diff.md  multi-variant.md  p-values.md  sample-size.md
examples/: 01_quickstart.ipynb  02_planning_your_test.ipynb  03_analyzing_results.ipynb  04_advanced_methods.ipynb  05_diagnostics.ipynb  06_business_impact.ipynb
expstats/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FormField.jsx
frontend/src/components/charts/: CIComparisonChart.jsx  DiffInDiffChart.jsx  DistributionChart.jsx  PowerCurveChart.jsx  RateComparisonChart.jsx  SurvivalPlot.jsx  theme.js
frontend/src/pages/: CICalculator.jsx  DiagnosticsPage.jsx  DiffInDiffCalculator.jsx  ImpactProjectionPage.jsx  SampleSizeCalculator.jsx  SegmentAnalysisPage.jsx  SignificanceCalculator.jsx  TimingCalculator.jsx  ToolkitPage.jsx
joss-submission/: Makefile  README.md  paper.md  paper.tex  references.bib  screenshot-guide.md
pyexpstats/: __init__.py  api.py
pyexpstats/business/: __init__.py  guardrails.py  impact.py
pyexpstats/diagnostics/: __init__.py  health.py  novelty.py  srm.py
pyexpstats/effects/: __init__.py
pyexpstats/effects/outcome/: __init__.py  conversion.py  magnitude.py  timing.py
pyexpstats/methods/: __init__.py  sequential.py
pyexpstats/planning/: __init__.py  duration.py  mde.py
pyexpstats/segments/: __init__.py  analysis.py
pyexpstats/utils/: __init__.py  math.py  stats.py  validation.py
pyexptest/: README.md
pyexptest/frontend/src/pages/: PowerCalculator.jsx  SampleSizeCalculator.jsx  SignificanceCalculator.jsx
pyexptest/pyexptest/: __init__.py  api.py  conversion_effect.py  numeric_effect.py
pyexptest/tests/: test_conversion_effect.py  test_numeric_effect.py
requirements/: B Testing Software Package.md  B Testing Software Validation.md  B Testing Tools Analysis.md  B Testing Tools.md  Interactive Visualization Specifications (React + JS).md
tests/: test_bayesian.py  test_business.py  test_conversion.py  test_diagnostics.py  test_edge_cases.py  test_magnitude.py  test_planning.py  test_robustness.py  test_segments.py  test_sequential.py  test_timing.py
