[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexpstats"
version = "0.2.0"
description = "Statistical tools for A/B testing - sample size calculation, power analysis, significance testing, Bayesian analysis, sequential testing, and business impact projections"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pyexpstats contributors"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ab-testing",
    "statistics",
    "sample-size",
    "power-analysis",
    "hypothesis-testing",
    "experimentation",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pyexpstats/pyexpstats"
Documentation = "https://github.com/pyexpstats/pyexpstats#readme"
Repository = "https://github.com/pyexpstats/pyexpstats"
Issues = "https://github.com/pyexpstats/pyexpstats/issues"

[project.scripts]
pyexpstats-server = "pyexpstats.api:main"

[tool.setuptools]
packages = [
    "pyexpstats",
    "pyexpstats.utils",
    "pyexpstats.effects",
    "pyexpstats.effects.outcome",
    "pyexpstats.methods",
    "pyexpstats.diagnostics",
    "pyexpstats.segments",
    "pyexpstats.business",
    "pyexpstats.planning",
]

[tool.setuptools.package-data]
pyexpstats = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
