[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abverdict"
version = "0.3.1"
description = "Statistical tools for A/B testing - sample size calculation, power analysis, significance testing, Bayesian analysis, sequential testing, and business impact projections"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "abverdict contributors"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ab-testing",
    "a-b-testing",
    "split-testing",
    "experiment-analysis",
    "statistical-significance",
    "sample-size-calculator",
    "conversion-rate-optimization",
    "hypothesis-testing",
    "power-analysis",
    "p-value",
    "confidence-interval",
    "bayesian-ab-testing",
    "sequential-testing",
    "chi-square-test",
    "t-test",
    "survival-analysis",
    "kaplan-meier",
    "difference-in-differences",
    "causal-inference",
    "experimentation-platform",
    "product-analytics",
    "python-statistics",
    "cro",
    "growth",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
server = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# PEP 735 dependency group for the Vercel deployment: uv sync installs the
# default groups below even with --no-dev, but groups are NOT part of the
# published wheel's metadata, so pip users still get a lean install.
# Keep in sync with the [server] extra above.
[dependency-groups]
server = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[tool.uv]
default-groups = ["server"]

[project.urls]
Homepage = "https://github.com/brightertiger/abverdict"
Documentation = "https://github.com/brightertiger/abverdict#readme"
Repository = "https://github.com/brightertiger/abverdict"
Issues = "https://github.com/brightertiger/abverdict/issues"

[project.scripts]
abverdict-server = "abverdict.api:main"

[tool.setuptools]
packages = [
    "abverdict",
    "abverdict.utils",
    "abverdict.effects",
    "abverdict.effects.outcome",
    "abverdict.methods",
    "abverdict.diagnostics",
    "abverdict.segments",
    "abverdict.business",
    "abverdict.planning",
]

[tool.setuptools.package-data]
abverdict = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
